# tecnical_test

./: README.md  architecture_folder.json  pyproject.toml
mlruns/0/: meta.yaml
src/: accuracy.parquet  data_demo.csv  f1_score.parquet  mejor_modelo.pkl  recall.parquet
src/data/: wine.parquet
src/features/: class_create_tree_folders.py
src/notebooks/: 02_model.ipynb  03_cv_parser.ipynb  parce_cv.json
